--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -10,7 +10,8 @@
     "noEmit": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@server": ["../server/*"]
     }
   },
   "include": ["vite.config.ts"]
