--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,8 +11,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@server/*": ["../server/*"]
+      "@/*": ["./src/*"]
     }
   }
 }
