--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -10,8 +10,7 @@
     "noEmit": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@server": ["../server/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["vite.config.ts"]
